--- a/.templates/geekcode.html
+++ b/.templates/geekcode.html
@@ -1,10 +1,10 @@
 {#
-    .templates/geekcode.fr.html
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    .templates/geekcode.html
+    ~~~~~~~~~~~~~~~~~~~~~~~~
 
-    Intégration d'un petit Geek Code. (fr version)
+    Intégration d'un petit Geek Code.
 
-    :copyright: Copyright 2013 Lilian Besson
+    :copyright: Copyright 2014 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <div id="geekCode">
