--- a/LICENSE.html
+++ b/LICENSE.html
@@ -726,4 +726,6 @@ the library.  If this is what you want to do, use the GNU Lesser General
 Public License instead of this License.  But first, please read
 &lt;<a href="http://www.gnu.org/philosophy/why-not-lgpl.html">http://www.gnu.org/philosophy/why-not-lgpl.html</a>&gt;.</p>
 
+
+<img style="visibility: hidden; display: none;" src="https://ga-beacon.appspot.com/UA-38514290-1/web-sphinx/LICENSE.html?pixel"/>
 </body></html>
