--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -38,7 +38,7 @@
   <!-- MathJax.js (http://mathjax.org/) async is quicker -->
    <script async type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML&amp;locale=fr?1"></script>
   <!-- MouseTrap.js (http://craig.is/killing/mice) -->
-   <script async type="text/javascript" src="{{ pathto('_static/mousetrap.min.js', true)|e }}?1"></script>
+   <script type="text/javascript" src="{{ pathto('_static/mousetrap.min.js', true)|e }}?1"></script>
   <!-- NProgress.js (https://github.com/rstacruz/nprogress) NEW is now loaded with conf.py:81@mathjax_path -->
 <!--   <script type="text/javascript" src="{{ pathto('_static/nprogress.js', true)|e }}?1"></script> -->
   <!-- Forkit.js (http://hakim.se/lab/forkit.js)-->
@@ -141,13 +141,13 @@
 		    noty({text: ("<b>Chargement de " + newcolor + ".css ...</b></br><small>Le style devrait avoir changé, si non, peut-être pouvez-vous <a href=\"https://bitbucket.org/lbesson/web-sphinx/issues/new\">signaler un bug</a> ?</small>"), timeout: 5000});
 	} };
   </script>
-  <script async type="text/javascript" src="{{ pathto('_static/layout.noty.js', true)|e }}"></script>
+ 	 <script type="text/javascript" src="{{ pathto('_static/layout.noty.js', true)|e }}"></script>
 	<!-- Smooth Scroll plugin (source: https://github.com/kswedberg/jquery-smooth-scroll) -->
-	 <script async type="text/javascript" src="{{ pathto('_static/jquery.smooth-scroll.min.js', true)|e }}?1"></script>
+	 <script type="text/javascript" src="{{ pathto('_static/jquery.smooth-scroll.min.js', true)|e }}?1"></script>
 	<!-- jQuery TimeAgo plugin (source : http://timeago.yarp.com/) -->
-	 <script async type="text/javascript" src="{{ pathto('_static/jquery.timeago.js', true)|e }}?1"></script>
+	 <script type="text/javascript" src="{{ pathto('_static/jquery.timeago.js', true)|e }}?1"></script>
 	<!-- scrollUp jQuery plugin (source : http://markgoodyear.com/2013/01/scrollup-jquery-plugin/) -->
-	 <script async type="text/javascript" src="{{ pathto('_static/jquery.scrollUp.min.js', true)|e }}?1"></script>
+	 <script type="text/javascript" src="{{ pathto('_static/jquery.scrollUp.min.js', true)|e }}?1"></script>
 <script type="text/javascript">
 console.log("[INFO] Starting main JS content when document will be ready ! © Lilian BESSON, 2011-2014.");
   NProgress.inc();
