--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -10,7 +10,7 @@
 {% extends "!layout.html" %}
 {% block doctype %}<!DOCTYPE html>{% endblock %}
 {% block rootrellink %}
- <li><a href="http://perso.crans.org/besson/" title="Page principale">
+ <li><a href="http://besson.qc.to/" title="Page principale">
   <img src="{{ pathto('_static/.besson.png', true)|e }}?1" alt="http://besson.qc.to/" style="height:32px; width:32px; vertical-align: middle; margin-top: -1px" /></a>»</li>
  <li><a href="{{ pathto('index') }}">{{ shorttitle }}</a>{{ reldelim1 }}</li>
 {% endblock %}
@@ -27,8 +27,8 @@
   <meta name="viewport" content="width=device-width, maximum-scale=2.5, initial-scale=1, target-densitydpi=device-dpi"/>
   <meta name="author" content="Lilian Besson" />
   <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen,Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking" />
-  <!-- RSS workflow (from perso.crans.org/besson) -->
-  <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="http://perso.crans.org/besson/rss.xml" />
+  <!-- RSS workflow (from besson.qc.to) -->
+  <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="http://besson.qc.to/rss.xml" />
   <link rel="stylesheet" media="screen and (min-width: 680px)" href="{{ pathto('_static/forkit.css', true)|e }}?1" />
   <link rel="stylesheet" media="screen" href="{{ pathto('_static/buttons.css', true)|e }}?1" />
   <link rel="stylesheet" media="screen and (min-width: 380px)" href="{{ pathto('_static/nprogress.css', true)|e }}?1" />
@@ -134,9 +134,9 @@
   	NProgress.start();
 	function changeStyle(newcolor) {
 		if (newcolor != "") {
-			console.log("[INFO] Loading the stylesheet '" + ("http://perso.crans.org/besson/_static/" + newcolor + ".css?1") + "'");
+			console.log("[INFO] Loading the stylesheet '" + ("http://besson.qc.to/_static/" + newcolor + ".css?1") + "'");
 			$("head").append(
-		    	$("<link/>", {href: ("http://perso.crans.org/besson/_static/" + newcolor + ".css?1"), rel: "stylesheet"})
+		    	$("<link/>", {href: ("http://besson.qc.to/_static/" + newcolor + ".css?1"), rel: "stylesheet"})
 		    );
 		    noty({text: ("<b>Chargement de " + newcolor + ".css ...</b></br><small>Le style devrait avoir changé, si non, peut-être pouvez-vous <a href=\"https://bitbucket.org/lbesson/web-sphinx/issues/new\">signaler un bug</a> ?</small>"), timeout: 5000});
 	} };
@@ -292,8 +292,8 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
  * I'm a Computer Science and Mathematics student, at ENS de Cachan.
  * This file layout.html is part of my web pages, generated with Sphinx.
  * Those pages are hosted
- *  - here on the Crans network, http://perso.crans.org/besson or http://besson.qc.to;
- *  - here at ENS de Cachan, http://www.dptinfo.ens-cachan.fr/~lbesson or http://lbesson.qc.to (DEAD);
+ *  - here on the Crans network, http://perso.crans.org/besson or http://besson.qc.to (DEAD);
+ *  - here at ENS de Cachan, http://www.dptinfo.ens-cachan.fr/~lbesson or http://lbesson.qc.to;
  *  - sometimes on my machine, http://jarvis.crans.org/ (only locally on the crans network).
  *
  * This document is a Jinja Template, to modify all the HTML pages produced
