--- a/README.html
+++ b/README.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html><html><head><meta charset="utf-8"/><title>https://bitbucket.org/lbesson/web-sphinx</title></head><body><xmp theme="united">
 Web Pages Sphinx
 ================
 
@@ -73,3 +74,4 @@ This project is released under the **GPLv3 license**, for more details,
 take a look at the [LICENSE file](http://besson.qc.to/LICENSE.html) in the source.
 
 *Basically, that allow you to use all or part of the project for you own business.*
+</xmp><script type="text/javascript" src="https://lbesson.bitbucket.org/md/strapdown.js"></script><img alt="GA|Analytics" style="visibility: hidden; display: none;" src="https://ga-beacon.appspot.com/UA-38514290-1/agreg/maths.html?pixel"/></body></html>
