--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -74,7 +74,7 @@
     console.log("\n[INFO] alert called with texttoprint=" + texttoprint + ", and extradict=" + extradict);
     if ($.noty !== undefined){
       if (extradict !== undefined){ var args = extradict; args.text = texttoprint; noty(args); } 
-      else { noty({text: texttoprint}); }
+      else { noty({text: texttoprint, timeout: 5000}); }
     }
     else {
       console.log("[ERROR] An alert was displayed with window.alert instead of noty. Maybe noty is not available ?"
@@ -195,8 +195,8 @@ console.log("[INFO] Starting main JS content when document will be ready ! © Li
  Mousetrap.bind(["i", "home"], function() { alert("Going to index.html"); location.href="index.html";});    
 {% if next %}Mousetrap.bind(["right", "n"], function() { alert("Going to next <a href=\"{{ next.link|e }}\">{{ next.link|e }}</a>"); location.href="{{ next.link|e }}";});{% endif %}
 {% if last_updated %}Mousetrap.bind(["u"], function() { //'%d %b %Y, %Hh:%Mm:%Ss'
-   var last_updated_value = "{{ last_updated }}" || "01 04 2014, 00h:30m:14s";
-    var day   = last_updated_value.substring(0,  2 ) || "01";
+   var last_updated_value = "{{ last_updated }}" || "04 04 2014, 00h:30m:14s";
+    var day   = last_updated_value.substring(0,  2 ) || "04";
     var month = last_updated_value.substring(3,  6 ) || "04"; // FIXME convert Sep -> 09, Oct -> 10 ect...
     var year  = last_updated_value.substring(7,  11) || "2014";
     var hours = last_updated_value.substring(13, 15) || "12";
