--- a/.templates/searchbox.en.html
+++ b/.templates/searchbox.en.html
@@ -4,7 +4,7 @@
 
     The search box. (en version)
 
-    :copyright: Copyright 2013 Lilian Besson
+    :copyright: Copyright 2013-14 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if pagename != "search" %}
@@ -12,7 +12,7 @@
   <h3>Quick search</h3>
     <form class="search" action="{{ pathto('search') }}" method="get">
       <input type="text" name="q" />
-      <input type="submit" value="Go !" />
+      <input type="submit" class="btn btn-info" value="Go !" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
