--- a/.templates/searchbox.en.html
+++ b/.templates/searchbox.en.html
@@ -12,11 +12,11 @@
   <h3>Quick search</h3>
     <form class="search" action="{{ pathto('search') }}" method="get">
       <input type="text" name="q" />
-      <input type="submit" class="btn btn-info" value="Go !" />
+      <input type="submit" class="btn" value="Go ! " />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
-    <p class="searchtip" style="font-size: 80%">Search for a keyword ?</p>
+    <p class="searchtip" style="font-size: 80%;">Search for a keyword ?</p>
 </div>
 <script type="text/javascript">$('#searchbox').show(0);</script>
 {%- endif %}
