--- a/header.html
+++ b/header.html
@@ -87,7 +87,7 @@
              >À propos de folders.html</a></li>
         <li><a href="http://besson.qc.to/" title="Page principale">
           <img src="http://perso.crans.org/besson/_static/.besson.png" alt="http://besson.qc.to/" style="height:32px; width:32px; vertical-align: middle; margin-top: -1px" /></a>»</li>
-         <li><a href="index.html">Lilian Besson</a> &raquo;</li>
+         <li><a href="http://perso.crans.org/besson/index.html">Lilian Besson</a> &raquo;</li>
 
        <script type="text/javascript">
         function writeLocationOfThePage(beforetext, aftertext) {
