--- a/.templates/social_icons.fr.html
+++ b/.templates/social_icons.fr.html
@@ -8,10 +8,11 @@
     :license: GPLv3, see LICENSE for details.
 #}
   <h3>Restons en contact !</h3>
+  <ul class="details">
+    <li><p>Tél.: <a href="tel:100101011101001100111101100001_2">+336.28.41.22.57</a></p></li>
+    <li><p><a href="mailto:naereen(at_crans{.]org">naereen(à)crans(.)org</a></p></li>
+    <li><p><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></p></li>
+  </ul>
   <ul class="social-icons">
     <li><a class="facebook" href="http://www.facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
-  </ul>
-  <ul class="details">
-    <li><p style="font-size:80%;">Tél.: <a href="tel:100101011101001100111101100001_2">+336 2841 2257</a></p></li>
-    <li><p style="font-size:80%;"><a href="mailto:besson[at]crans[.]org">besson[at]crans[.]org</a></p></li>
   </ul>
