--- a/.templates/social_icons.en.html
+++ b/.templates/social_icons.en.html
@@ -7,7 +7,7 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-  <h3>Stay in touch!</h3>
+  <h3>Contact me ?</h3>
   <ul class="details">
     <li><p>Phone: <a href="tel:100101011101001100111101100001_2">+336.28.41.22.57</a></p></li>
     <li><p><a href="mailto:besson_AT_crans[DOT..)org">besson(at)crans(.)org</a></p></li>
