layout.html: move forkit div, better now.

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -83,8 +83,6 @@
     }; };
 </script>
 {{ super() }}
-<a class="forkit" data-text="Sur BitBucket ?" data-text-detached="Tout est OpenSource !" href="http://bitbucket.org/lbesson/web-sphinx/">
-<img style="position: absolute; top: 0; right: 0; border: 0;" alt="Consultez mes dépôts git!" /></a>
 {% endblock %}
 
 {% block relbaritems %}
@@ -119,11 +117,15 @@
  <noscript><li><span style="color: red">(JavaScript is disabled)</span></li></noscript> 
 {% endblock %}
 
-{#
-  {% block document %}
-  {{ super() }}
-  {% endblock %}
-#}
+
+{% block document %}
+<div id="divforkit">
+  <a class="forkit" data-text="Sur BitBucket ?" data-text-detached="Tout est OpenSource !" href="http://bitbucket.org/lbesson/web-sphinx/">
+  <img style="position: absolute; top: 0; right: 0; border: 0;" alt="Consultez mes dépôts git!" /></a>
+</div>
+{{ super() }}
+{% endblock %}
+
 
 {% block footer %}
 {{ super() }}
