--- a/.templates/social_icons.en.html
+++ b/.templates/social_icons.en.html
@@ -11,7 +11,7 @@
   <ul class="details">
     <li><p>Phone: <a href="tel:100101011101001100111101100001_2">+336.28.41.22.57</a></p></li>
     <li><p><a href="mailto:besson_AT_crans[DOT..)org">besson(at)crans(.)org</a></p></li>
-    <li><p><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></p></li>
+    <!-- <li><p><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></p></li> -->
   </ul>
   <ul class="social-icons">
     <li><a class="facebook" href="https://www.facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
