--- a/.templates/social_icons.fr.html
+++ b/.templates/social_icons.fr.html
@@ -10,8 +10,8 @@
   <h3>Info. de contact</h3>
   <ul class="details">
     <li><p>Tél.: <a href="tel:100101011101001100111101100001_2">+336.28.41.22.57</a></p></li>
-    <li><p><a href="mailto:naereen(at_crans{.]org">naereen(à)crans(.)org</a></p></li>
-    <li><p><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></p></li>
+    <li><p><a href="mailto:besson(at_crans{.]org">besson(à)crans(.)org</a></p></li>
+    <!-- <li><p><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></p></li> -->
   </ul>
   <ul class="social-icons">
     <li><a class="facebook" href="http://www.facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
