--- a/.templates/social_icons.fr.html
+++ b/.templates/social_icons.fr.html
@@ -7,7 +7,7 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-  <h3>Info. de contact</h3>
+  <h3>Infos de contact</h3>
   <ul class="details">
     <li><p>Tél.: <a href="tel:100101011101001100111101100001_2">+336.28.41.22.57</a></p></li>
     <li><p><a href="mailto:besson(at_crans{.]org">besson(à)crans(.)org</a></p></li>
