Update versions of used softwares.

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -237,7 +237,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
 </noscript>
 <div class="supportBadges"><ul>
 <li><a class="image-reference" title="Firefox" href="http://www.mozilla.org/en-US/firefox/all/">
- <img alt="Optimized for Firefox, tested on Firefox 28.0"
+ <img alt="Optimized for Firefox, tested on Firefox v28.0 and elinks v0.12pre6"
       src="{{ pathto('_images/.firefox_80_15.png', true)|e }}" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Google Analytics" href="https://www.google.com/analytics/">
@@ -245,7 +245,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="GNU Nano" href="http://www.nano-editor.org/">
- <img alt="Written with GNU Nano 2.3.2 and Sublime Text 3" 
+ <img alt="Written with GNU Nano 2.3.2-svn and Sublime Text v3.059" 
       src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="GPL v3" href="http://www.gnu.org/licenses/gpl.html">
@@ -253,38 +253,38 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       src="{{ pathto('_images/.opensource_80_15.png', true)|e }}" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Python" href="http://www.python.org/download/">
- <img alt="Python 2.7.3 powered :)" 
+ <img alt="Python v2.7.6 powered :)" 
       src="{{ pathto('_images/.python_80_15.png', true)|e }}" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Sphinx" href="http://sphinx-doc.org/install.html">
- <img alt="Made with Sphinx 1.3a0" 
+ <img alt="Made with Sphinx v1.3a0" 
       src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Ubuntu 12.04.04 LTS" href="http://www.ubuntu.com/about/about-ubuntu">
- <img alt="Made on Ubuntu 12.04.4 LTS" 
+<li><a class="image-reference" title="Ubuntu 14.04.2 LTS" href="http://www.ubuntu.com/about/about-ubuntu">
+ <img alt="Made on Ubuntu 14.04.2 LTS" 
       src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Bitbucket" href="https://bitbucket.org/lbesson/web-sphinx/" >
- <img alt="Source code hosted on bitbucket.org, managed with Git 1.7.9.5"
+ <img alt="Source code hosted on bitbucket.org, managed with Git v1.9.1"
       src="{{ pathto('_images/.git_80_15.png', true)|e }}" 
       style="width: 36.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="MathJax" href="http://www.mathjax.org">
- <img alt="Powered by MathJax 2.3"
+ <img alt="Powered by MathJax v2.3.1"
       src="{{ pathto('_images/.mathjax_60_12.png', true)|e }}"
       style="width: 60.0px; height: 12.0px;" /></a></li>
 <li><script type="text/javascript">
-  if ( (window.location.host.substring(0,6) == 'jarvis') || (window.location.host.substring(0,9) == '127.0.0.1') || (window.location.host.substring(0,7) == '0.0.0.0') ) {
-  window.document.write("<a class=\"image-reference\" title=\"nginx\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx 1.4.7 on "
+  if ( (window.location.host.substring(0,6) == 'jarvis') || (window.location.host.substring(0,6) == '127.0.') || (window.location.host.substring(0,7) == '0.0.0.0') ) {
+  window.document.write("<a class=\"image-reference\" title=\"nginx\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx v1.4.6 on "
   + window.location.host + "\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}?1\" style=\"width: 80.0px; height: 15.0px;\" /></a>"); 
   }
   else {
-  window.document.write("<a class=\"image-reference\" title=\"Apache\" href=\"http://httpd.apache.org/ABOUT_APACHE.html\"><img alt=\"Web server : Apache v2.2.4 on "
+  window.document.write("<a class=\"image-reference\" title=\"Apache\" href=\"http://httpd.apache.org/ABOUT_APACHE.html\"><img alt=\"Web server : Apache v2.2.22 on "
   + window.location.host + "\" src=\"{{ pathto('_images/.apache_80_15.png', true)|e }}?1\" style=\"width: 80.0px; height: 15.0px;\" /></a>"); 
   };
   NProgress.inc();
   </script>
   <noscript>
-  <a class="image-reference" title="Apache" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache v2.2.4" src="{{ pathto('_images/.apache_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
+  <a class="image-reference" title="Apache" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache v2.2.22" src="{{ pathto('_images/.apache_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
   </noscript>
 </li></ul></div> 
 <script type="text/javascript" src="{{ pathto('_static/ga.js', true)|e }}"></script>
