--- a/.templates/social_icons.en.html
+++ b/.templates/social_icons.en.html
@@ -7,11 +7,11 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-  <h3>Contact me ?</h3>
+  <h3><a title="More details!" href="{{ pathto('callme.en.html', true)|e }}">Contact me ?</a></h3>
   <ul class="details">
-    <li><p>Phone: <a href="tel:100101011101001100111101100001_2">+336.28.41.22.57</a></p></li>
-    <li><p><a href="mailto:besson_AT_crans[DOT..)org">besson(at)crans(.)org</a></p></li>
-    <!-- <li><p><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></p></li> -->
+    <li>Phone: <a href="tel:100101011101001100111101100001_2">+336.28.41.22.57</a></li>
+    <li><a href="mailto:besson_AT_crans[DOT..)org">besson(at)crans(.)org</a></li>
+    <!-- <li><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></li> -->
   </ul>
   <ul class="social-icons">
     <li><a class="facebook" href="https://www.facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
