--- a/.templates/social_icons.fr.html
+++ b/.templates/social_icons.fr.html
@@ -7,11 +7,11 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-  <h3>Infos de contact</h3>
+  <h3><a title="Plus de détails !" href="{{ pathto('callme.fr.html', true)|e }}">Infos de contact</a></h3>
   <ul class="details">
-    <li><p>Tél.: <a href="tel:100101011101001100111101100001_2">+336.28.41.22.57</a></p></li>
-    <li><p><a href="mailto:besson(at_crans{.]org">besson(à)crans(.)org</a></p></li>
-    <!-- <li><p><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></p></li> -->
+    <li>Tél.: <a href="tel:100101011101001100111101100001_2">+336.28.41.22.57</a></li>
+    <li><a href="mailto:besson(at_crans{.]org">besson(à)crans(.)org</a></li>
+    <!-- <li><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></li> -->
   </ul>
   <ul class="social-icons">
     <li><a class="facebook" href="http://www.facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
