Petites corrections. Et plus de liens vers FB

--- a/.templates/social_icons.en.html
+++ b/.templates/social_icons.en.html
@@ -9,10 +9,10 @@
 #}
   <h3><a title="More details!" href="{{ pathto('callme.en.html', true)|e }}">Contact me ?</a></h3>
   <ul class="details">
-    <li>Phone: <a href="tel:100101011101001100111101100001_2">+336.28.41.22.57</a></li>
+    <li>Phone: <a href="tel:100101011101001100111101100001_2">+33.6.28.41.22.57</a></li>
     <li><a href="mailto:besson_AT_crans[DOT..)org">besson(at)crans(.)org</a></li>
     <!-- <li><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></li> -->
   </ul>
-  <ul class="social-icons">
+<!--   <ul class="social-icons">
     <li><a class="facebook" href="https://www.facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
-  </ul>
+  </ul> -->
