--- a/.templates/social_icons.fr.html
+++ b/.templates/social_icons.fr.html
@@ -9,10 +9,10 @@
 #}
   <h3><a title="Plus de détails !" href="{{ pathto('callme.fr.html', true)|e }}">Infos de contact</a></h3>
   <ul class="details">
-    <li>Tél.: <a href="tel:100101011101001100111101100001_2">+336.28.41.22.57</a></li>
+    <li>Tél.: <a href="tel:100101011101001100111101100001_2">+33.6.28.41.22.57</a></li>
     <li><a href="mailto:besson(at_crans{.]org">besson(à)crans(.)org</a></li>
     <!-- <li><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></li> -->
   </ul>
-  <ul class="social-icons">
+<!--   <ul class="social-icons">
     <li><a class="facebook" href="http://www.facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
-  </ul>
+  </ul> -->
