Typo. Django != Jinja!

--- a/.templates/download.fr.html
+++ b/.templates/download.fr.html
@@ -54,6 +54,6 @@ les fichiers PDF ainsi produits.</p>
 veuillez utiliser la page <a href="https://bitbucket.org/lbesson/web-sphinx/issues" title="Signaler un bug ?" >web-sphinx/issues</a>.</p>
 <h2>À propos</h2>
  <p>Cette page est générée grâce à <strong>.templates/download.html</strong>,
-un fichier de template Django.</p>
+un fichier de template Jinja.</p>
  <p>Cette page est inspirée de la documentation de Python.</p>
 {% endblock %}
