--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -241,7 +241,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
 </noscript>
 <div class="supportBadges"><ul>
 <li><a class="image-reference" title="Firefox" href="http://www.mozilla.org/en-US/firefox/all/">
- <img alt="Optimized for Firefox, tested on Firefox v36.0 and elinks v0.12pre6"
+ <img alt="Tested on Firefox v36.0.4 and elinks v0.12pre6"
       src="{{ pathto('_images/.firefox_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Google Analytics" href="https://www.google.com/analytics/">
@@ -249,7 +249,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="GNU Nano" href="http://www.nano-editor.org/">
- <img alt="Written with GNU Nano 2.3.2-svn and Sublime Text v3.065"
+ <img alt="Written with GNU Nano 2.3.2-svn and Sublime Text v3.080"
       src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="GPL v3" href="http://www.gnu.org/licenses/gpl.html">
@@ -261,11 +261,11 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       src="{{ pathto('_images/.python_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Sphinx" href="http://sphinx-doc.org/install.html">
- <img alt="Made with Sphinx v1.3a0"
+ <img alt="Made with Sphinx v1.4a0"
       src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Ubuntu 14.10" href="http://www.ubuntu.com/about/about-ubuntu">
- <img alt="Made on Ubuntu 14.10"
+<li><a class="image-reference" title="Ubuntu 14.10.1" href="http://www.ubuntu.com/about/about-ubuntu">
+ <img alt="Made on Ubuntu 14.10.1"
       src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Bitbucket" href="https://bitbucket.org/lbesson/web-sphinx/" >
@@ -273,7 +273,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       src="{{ pathto('_images/.git_80_15.png', true)|e }}"
       style="width: 36.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="MathJax" href="http://www.mathjax.org">
- <img alt="Powered by MathJax v2.5.1"
+ <img alt="Powered by MathJax v2.5.0"
       src="{{ pathto('_images/.mathjax_60_12.png', true)|e }}"
       style="width: 60.0px; height: 12.0px;" /></a></li>
 <li><script type="text/javascript">
