--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -240,39 +240,39 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
      src="https://ga-beacon.appspot.com/UA-38514290-1/{{ pagename|e }}{{ file_suffix|e }}?pixel" />
 </noscript>
 <div class="supportBadges"><ul>
-<li><a class="image-reference" title="Firefox" href="http://www.mozilla.org/en-US/firefox/all/">
+<li><a class="image-reference" title="Tested on Firefox v36.0.4 and elinks v0.12pre6" href="http://www.mozilla.org/en-US/firefox/all/">
  <img alt="Tested on Firefox v36.0.4 and elinks v0.12pre6"
       src="{{ pathto('_images/.firefox_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Google Analytics" href="https://www.google.com/analytics/">
+<li><a class="image-reference" title="Uses Google Analytics" href="https://www.google.com/analytics/">
  <img alt="Uses Google Analytics"
       src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="GNU Nano" href="http://www.nano-editor.org/">
+<li><a class="image-reference" title="Written with GNU Nano 2.3.2-svn and Sublime Text v3.080" href="http://www.nano-editor.org/">
  <img alt="Written with GNU Nano 2.3.2-svn and Sublime Text v3.080"
       src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="GPL v3" href="http://www.gnu.org/licenses/gpl.html">
+<li><a class="image-reference" title="These pages are an Open Source project, released with the GPLv3 License" href="http://www.gnu.org/licenses/gpl.html">
  <img alt="These pages are an Open Source project, released with the GPLv3 License"
       src="{{ pathto('_images/.opensource_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Python" href="https://www.python.org/download/">
+<li><a class="image-reference" title="Python v2.7.8 powered :)" href="https://www.python.org/download/">
  <img alt="Python v2.7.8 powered :)"
       src="{{ pathto('_images/.python_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Sphinx" href="http://sphinx-doc.org/install.html">
+<li><a class="image-reference" title="Made with Sphinx v1.4a0" href="http://sphinx-doc.org/install.html">
  <img alt="Made with Sphinx v1.4a0"
       src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Ubuntu 14.10.1" href="http://www.ubuntu.com/about/about-ubuntu">
+<li><a class="image-reference" title="Made on Ubuntu 14.10.1" href="http://www.ubuntu.com/about/about-ubuntu">
  <img alt="Made on Ubuntu 14.10.1"
       src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Bitbucket" href="https://bitbucket.org/lbesson/web-sphinx/" >
+<li><a class="image-reference" title="Source code hosted on bitbucket.org, managed with Git v2.1.1" href="https://bitbucket.org/lbesson/web-sphinx/" >
  <img alt="Source code hosted on bitbucket.org, managed with Git v2.1.1"
       src="{{ pathto('_images/.git_80_15.png', true)|e }}"
       style="width: 36.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="MathJax" href="http://www.mathjax.org">
+<li><a class="image-reference" title="Powered by MathJax v2.5.0" href="http://www.mathjax.org">
  <img alt="Powered by MathJax v2.5.0"
       src="{{ pathto('_images/.mathjax_60_12.png', true)|e }}"
       style="width: 60.0px; height: 12.0px;" /></a></li>
