--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -203,9 +203,9 @@ console.log("[INFO] Starting main JS content when document will be ready ! © Li
  Mousetrap.bind(["i", "home"], function() { alert("Going to index.html"); location.href="index.html";});
 {% if next %}Mousetrap.bind(["right", "n"], function() { alert("Going to next <a href=\"{{ next.link|e }}\">{{ next.link|e }}</a>"); location.href="{{ next.link|e }}";});{% endif %}
 {% if last_updated %}Mousetrap.bind(["u"], function() { //'%d %b %Y, %Hh:%Mm:%Ss'
-   var last_updated_value = "{{ last_updated }}" || "03 03 2015, 12h:00m:00s";
-    var day   = last_updated_value.substring(0,  2 ) || "03";
-    var month = last_updated_value.substring(3,  6 ) || "03"; // FIXME convert Sep -> 09, Oct -> 10 ect...
+   var last_updated_value = "{{ last_updated }}" || "07 10 2015, 12h:00m:00s";
+    var day   = last_updated_value.substring(0,  2 ) || "07";
+    var month = last_updated_value.substring(3,  6 ) || "10"; // FIXME convert Sep -> 09, Oct -> 10 ect...
     var year  = last_updated_value.substring(7,  11) || "2015";
     var hours = last_updated_value.substring(13, 15) || "12";
     var mins  = last_updated_value.substring(17, 19) || "00";
@@ -240,36 +240,36 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
      src="https://ga-beacon.appspot.com/UA-38514290-1/{{ pagename|e }}{{ file_suffix|e }}?pixel" />
 </noscript>
 <div class="supportBadges"><ul>
-<li><a class="image-reference" title="Tested on Firefox v36.0.4 and elinks v0.12pre6" href="http://www.mozilla.org/en-US/firefox/all/">
- <img alt="Tested on Firefox v36.0.4 and elinks v0.12pre6"
+<li><a class="image-reference" title="Tested on Firefox v41.0 and elinks v0.12pre6" href="http://www.mozilla.org/en-US/firefox/all/">
+ <img alt="Tested on Firefox v41.0 and elinks v0.12pre6"
       src="{{ pathto('_images/.firefox_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Uses Google Analytics" href="https://www.google.com/analytics/">
  <img alt="Uses Google Analytics"
       src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Written with GNU Nano 2.3.2-svn and Sublime Text v3.080" href="http://www.nano-editor.org/">
- <img alt="Written with GNU Nano 2.3.2-svn and Sublime Text v3.080"
+<li><a class="image-reference" title="Written with GNU Nano 2.4.2 and Sublime Text v3.083" href="http://www.nano-editor.org/">
+ <img alt="Written with GNU Nano 2.4.2 and Sublime Text v3.083"
       src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="These pages are an Open Source project, released with the GPLv3 License" href="http://www.gnu.org/licenses/gpl.html">
  <img alt="These pages are an Open Source project, released with the GPLv3 License"
       src="{{ pathto('_images/.opensource_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Python v2.7.8 powered :)" href="https://www.python.org/download/">
- <img alt="Python v2.7.8 powered :)"
+<li><a class="image-reference" title="Python v2.7.9 powered :)" href="https://www.python.org/download/">
+ <img alt="Python v2.7.9 powered :)"
       src="{{ pathto('_images/.python_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Made with Sphinx v1.4a0" href="http://sphinx-doc.org/install.html">
- <img alt="Made with Sphinx v1.4a0"
+<li><a class="image-reference" title="Made with Sphinx v1.4a0+" href="http://sphinx-doc.org/install.html">
+ <img alt="Made with Sphinx v1.4a0+"
       src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Made on Ubuntu 14.10.1" href="http://www.ubuntu.com/about/about-ubuntu">
- <img alt="Made on Ubuntu 14.10.1"
+<li><a class="image-reference" title="Made on Ubuntu 15.04" href="http://www.ubuntu.com/about/about-ubuntu">
+ <img alt="Made on Ubuntu 15.04"
       src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Source code hosted on bitbucket.org, managed with Git v2.1.1" href="https://bitbucket.org/lbesson/web-sphinx/" >
- <img alt="Source code hosted on bitbucket.org, managed with Git v2.1.1"
+<li><a class="image-reference" title="Source code hosted on bitbucket.org, managed with Git v2.1.4" href="https://bitbucket.org/lbesson/web-sphinx/" >
+ <img alt="Source code hosted on bitbucket.org, managed with Git v2.1.4"
       src="{{ pathto('_images/.git_80_15.png', true)|e }}"
       style="width: 36.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Powered by MathJax v2.5.0" href="http://www.mathjax.org">
