Typo http → https.

--- a/header.html
+++ b/header.html
@@ -130,7 +130,7 @@
 
     <div class="document">
 <div id="divforkit">
-  <a class="forkit" data-text="Sur BitBucket ?" data-text-detached="Tout est OpenSource !" href="http://bitbucket.org/lbesson/web-sphinx/">
+  <a class="forkit" data-text="Sur BitBucket ?" data-text-detached="Tout est OpenSource !" href="https://bitbucket.org/lbesson/web-sphinx/">
   <img style="position: absolute; top: 0; right: 0; border: 0;" alt="Consultez mes dépôts git!" /></a>
 </div>
 
